--- a/src/assets/css/_progress-bar.css
+++ b/src/assets/css/_progress-bar.css
@@ -4,7 +4,7 @@
 }
 
 #nprogress .bar {
-  background: #3790ff;
+  background: #cca300;
 
   position: fixed;
   z-index: 1031;
@@ -22,7 +22,7 @@
   right: 0px;
   width: 100px;
   height: 100%;
-  box-shadow: 0 0 10px #3790ff, 0 0 5px #3790ff;
+  box-shadow: 0 0 10px #cca300, 0 0 5px #cca300;
   opacity: 1.0;
 
   -webkit-transform: rotate(3deg) translate(0px, -4px);
@@ -45,8 +45,8 @@
   box-sizing: border-box;
 
   border: solid 2px transparent;
-  border-top-color: #3790ff;
-  border-left-color: #3790ff;
+  border-top-color: #cca300;
+  border-left-color: #cca300;
   border-radius: 50%;
 
   -webkit-animation: nprogress-spinner 400ms linear infinite;
